ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ontheair-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: rollout-bluegreen-active
              servicePort: 80
